<resources>
    <string name="app_name">app_creat_profesionell_cv</string>
    <string name="open">"Open Navigation Drawer"</string>
    <string name="close">"Close Navigation Drawer"</string>
    <string name="dear_mr_ms_hiring_manager_s_last_name_n_nthank_you_for_the_opportunity_to_apply_for_the_financial_analyst_position_at_clean_world_as_a_detail_oriented_analyst_with_a_passion_for_numbers_i_am_thrilled_at_the_chance_to_develop_successful_strategic_financial_models_based_on_my_data_driven_insights_and_wealth_of_industry_expertise_n_nwith_more_than_seven_years_as_a_financial_analyst_at_profyl_org_i_held_the_responsibility_of_analyzing_and_refining_intricate_fp_amp_a_models_for_privately_held_multimillion_dollar_global_organizations_i_developed_a_series_of_recurring_reports_that_enhanced_our_forecasting_and_budgeting_processes_those_reports_also_significantly_improved_visibility_into_our_clients_rsquo_revenue_expense_and_functional_operations_profyl_org_rsquo_s_executive_team_leveraged_those_reports_to_grow_the_company_rsquo_s_revenue_by_more_than_28_over_the_last_two_years_n_nduring_my_decade_of_experience_in_the_financial_industry_i_rsquo_ve_developed_a_talent_for_distilling_complex_financial_data_into_clear_concise_and_actionable_reports_that_support_executive_decision_making_senior_leadership_commended_me_at_profyl_org_for_my_ability_to_think_strategically_and_anticipate_future_industry_trends_and_company_needs_in_late_2009_i_developed_a_model_that_highlighted_several_market_red_flags_that_awareness_prevented_the_company_from_executing_a_merger_that_would_have_failed_during_the_2011_black_monday_market_crash_n_ni_am_confident_that_my_extensive_technical_skills_along_with_my_proven_track_record_of_industry_success_would_make_me_a_great_fit_for_guiding_clean_world_rsquo_s_market_strategy_i_rsquo_m_looking_forward_to_a_having_a_conversation_about_the_financial_analyst_position_and_clean_world_n_nsincerely"><![CDATA[Dear Mr/Ms. [Hiring Manager\'s Last-Name],\n\nThank you for the opportunity to apply for the Financial Analyst position at Clean-World. As a detail-oriented analyst with a passion for numbers, I am thrilled at the chance to develop successful strategic financial models based on my data-driven insights and wealth of industry expertise.\n\nWith more than seven years as a Financial Analyst at Profyl.ORG, I held the responsibility of analyzing and refining intricate FP&A models for privately held, multimillion-dollar global organizations. I developed a series of recurring reports that enhanced our forecasting and budgeting processes. Those reports also significantly improved visibility into our clients&rsquo; revenue, expense and functional operations. Profyl.ORG&rsquo;s executive team leveraged those reports to grow the company&rsquo;s revenue by more than 28% over the last two years.\n\nDuring my decade of experience in the financial industry, I&rsquo;ve developed a talent for distilling complex financial data into clear, concise and actionable reports that support executive decision-making. Senior leadership commended me at Profyl.ORG for my ability to think strategically and anticipate future industry trends and company needs. In late 2009, I developed a model that highlighted several market red flags; that awareness prevented the company from executing a merger that would have failed during the 2011 “Black Monday” market crash.\n\nI am confident that my extensive technical skills along with my proven track record of industry success would make me a great fit for guiding Clean-World&rsquo;s market strategy. I&rsquo;m looking forward to a having a conversation about the Financial Analyst position and Clean-World.\n\nSincerely,]]></string>
    <string name="creat_cv" translatable="false">créer un cv</string>
    <string name="creat_letter_de_motivation" translatable="false">creat letter de motivation</string>
    <string name="creat_letter_de_dimission" translatable="false">creat letter de dimission</string>
    <string name="creat_letter_de_promotion" translatable="false">creat_letter_de_promotion</string>
    <string name="Question_d_entrevue" translatable="false">Question d\'entrevue</string>
    <string name="Books" translatable="false">Livres</string>
    <string name="entète">Entéte</string>
    <string name="corps">Corps</string>
    <string name="bas_de_page">Bas de page</string>
    <string name="ent_te">Entéte</string>
    <string name="letter_de_motivation">Letter de motivation</string>
    <string name="Letter_de_dimidion">Letter de dimidion</string>
    <string name="letter_de_promotion">Letter de Promotion</string>
    <string name="Books_For_Interview">Books For Interview</string>
    <string name="Information_CV">Information CV</string>
    <string name="information_personnelles">Information personnelles</string>
    <string name="education">Education</string>
    <string name="exp_rience_de_travail">Expérience de travail</string>
    <string name="projet">Projet</string>
    <string name="information_additionnelle">Information additionnelle</string>
    <string name="generate_cv">Generate CV</string>
    <string name="Info_Experince">Info Experince</string>
    <string name="coll_ge_universit">Collége/Université</string>
    <string name="titre_de_degr">Titre de degré</string>
    <string name="date_de_d_but">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="Info_Education">Info Education</string>
    <string name="Inforamtion_Personnel">Inforamtion Personnel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number_phone">Number Phone</string>
    <string name="email">Email</string>
    <string name="pays">Pays</string>
    <string name="ville">Ville</string>
    <string name="job">Job</string>
    <string name="about">About</string>
    <string name="Info_Of_Projet">Info Of Projet</string>
    <string name="les_comp_tance">les compétance</string>
    <string name="les_com_tance_compertamentale">les cométance compertamentale</string>
    <string name="les_langue">les langue</string>
    <string name="loisir">Loisir</string>
    <string name="certificat">Certificat</string>
    <string name="linkdin">Linkdin</string>
    <string name="Information_additional">Information additional</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="russian">Russian</string>
    <string name="modeles_of_cv">modeles of cv</string>
    <string name="CV">CV</string>
    <string name="Question">Question</string>
    <string name="nom_de_l_entreprise">Nom de l\'entreprise</string>
    <string name="titre_de_poste">Titre de poste</string>
    <string name="r_sum">Résumé</string>
    <string name="titre_de_projet">Titre de projet</string>
</resources>