<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Languages">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Aquamarine"
        app:title="Select your language" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar13">
        <TextView
            android:id="@+id/English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borer_language"
            android:layout_margin="15dp"
            android:text="@string/english"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/French"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borer_language"
            android:layout_margin="15dp"
            android:text="@string/french"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/German"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borer_language"
            android:layout_margin="15dp"
            android:text="@string/german"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/Italian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borer_language"
            android:layout_margin="15dp"
            android:text="@string/italian"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/Russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borer_language"
            android:layout_margin="15dp"
            android:text="@string/russian"
            android:gravity="center"
            android:textSize="30dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>