<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".M_LettersDesDémission.Customer_Service_Manager_Resignation">
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/Aquamarine"
      app:title="@string/Letter_de_dimidion"
      tools:ignore="MissingConstraints" />
  <ImageView
      android:id="@+id/showLetter"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_margin="20dp"
      app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/toolbar10"
      app:srcCompat="@drawable/eyes" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar10"
      app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="30dp"
          android:text="@string/ent_te"
          android:textSize="30dp" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alan Walker\nAlameda Street, Los Angeles, United States\n+1-541-754-3010\nyourEmailId@gmail.com\n\njuil. 25, 2024\n\nM. [Nom du gestionnaire recruteur]\nCadre XYZ\nNom de la société XYZ, Inc.\nAdresse complète de la société" />
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/corps"
          android:textSize="30dp"
          android:layout_margin="30dp" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/corps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dear Mr/Ms. [Hiring Manager's Last-Name],\n\nI am writing to notify you that I am resigning from my position as Customer Service Manager with [name of organization]. My last day of employment will be February 1.\n\nI appreciate the opportunities I have been given during my time with your company, as well as your professional guidance and support.\n\nI wish you and the company the best of success in the future.\n\nIf I can assist with the transition to my successor, please do let me know.\n\nSincerely,"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="30dp"
          android:layout_margin="30dp"
          android:text="@string/bas_de_page" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginBottom="20dp"
          android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/basDePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alan Walker" />
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
  </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>