<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".M_LettersDesMotivation.Finance_Analyst">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Aquamarine"
        app:title="@string/letter_de_motivation"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/showLetter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar10"
        app:srcCompat="@drawable/eyes" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar10"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/ent_te"
                android:textSize="30dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/entete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Alan Walker\nAlameda Street, Los Angeles, United States\n+1-541-754-3010\nyourEmailId@gmail.com\n\njuil. 25, 2024\n\nM. [Nom du gestionnaire recruteur]\nCadre XYZ\nNom de la société XYZ, Inc.\nAdresse complète de la société" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corps"
                android:textSize="30dp"
                android:layout_margin="30dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/corps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dear_mr_ms_hiring_manager_s_last_name_n_nthank_you_for_the_opportunity_to_apply_for_the_financial_analyst_position_at_clean_world_as_a_detail_oriented_analyst_with_a_passion_for_numbers_i_am_thrilled_at_the_chance_to_develop_successful_strategic_financial_models_based_on_my_data_driven_insights_and_wealth_of_industry_expertise_n_nwith_more_than_seven_years_as_a_financial_analyst_at_profyl_org_i_held_the_responsibility_of_analyzing_and_refining_intricate_fp_amp_a_models_for_privately_held_multimillion_dollar_global_organizations_i_developed_a_series_of_recurring_reports_that_enhanced_our_forecasting_and_budgeting_processes_those_reports_also_significantly_improved_visibility_into_our_clients_rsquo_revenue_expense_and_functional_operations_profyl_org_rsquo_s_executive_team_leveraged_those_reports_to_grow_the_company_rsquo_s_revenue_by_more_than_28_over_the_last_two_years_n_nduring_my_decade_of_experience_in_the_financial_industry_i_rsquo_ve_developed_a_talent_for_distilling_complex_financial_data_into_clear_concise_and_actionable_reports_that_support_executive_decision_making_senior_leadership_commended_me_at_profyl_org_for_my_ability_to_think_strategically_and_anticipate_future_industry_trends_and_company_needs_in_late_2009_i_developed_a_model_that_highlighted_several_market_red_flags_that_awareness_prevented_the_company_from_executing_a_merger_that_would_have_failed_during_the_2011_black_monday_market_crash_n_ni_am_confident_that_my_extensive_technical_skills_along_with_my_proven_track_record_of_industry_success_would_make_me_a_great_fit_for_guiding_clean_world_rsquo_s_market_strategy_i_rsquo_m_looking_forward_to_a_having_a_conversation_about_the_financial_analyst_position_and_clean_world_n_nsincerely"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_margin="30dp"
                android:text="@string/bas_de_page" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/basDePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="Alan Walker" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
